# fastapi-boilerplate

./: LICENSE  README.md  main.py  pyproject.toml
api/: __init__.py  index.py
api/product/: product_api.py  product_request_schema.py  product_response_schema.py
api/shop/: shop_api.py  shop_response_schema.py
app/: server.py
app/product/: product_model.py  product_service.py
tests/: test_library_mongodb.py  test_product_service.py
